<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class EspecieAnimal extends Model
{
    protected $fillable = [
        'animal_id',
        'especie_id',
    ];

    public function especie()
    {
        return $this->belongsTo('App\Models\Especie', 'especie_id');
    }

    public function animal()
    {
        return $this->belongsTo('App\Models\Animal', 'animal_id');
    }
}
